--- a/car-rent/data/pom.xml
+++ b/car-rent/data/pom.xml
@@ -18,6 +18,7 @@
         <file.encoding>UTF-8</file.encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <hibernate.version>5.6.12.Final</hibernate.version>
+        <querydsl.version>5.0.0</querydsl.version>
     </properties>
 
     <dependencies>
@@ -93,6 +94,17 @@
             <version>2.7.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-apt</artifactId>
+            <version>${querydsl.version}</version>
+            <classifier>jpa</classifier>
+        </dependency>
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-jpa</artifactId>
+            <version>${querydsl.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -125,18 +137,18 @@
                         <phase>process-resources</phase>
                     </execution>
 
-<!--                    <execution>-->
-<!--                        <id>Generate ChangeLog</id>-->
-<!--                        <configuration>-->
-<!--                            <propertyFile>src/main/resources/jdbc.properties</propertyFile>-->
-<!--                            <outputChangeLogFile>generatedChangeLog/GeneratedChangeLog.xml</outputChangeLogFile>-->
-<!--                            <dataDir>generatedChangeLog/data</dataDir>-->
-<!--                        </configuration>-->
-<!--                        <goals>-->
-<!--                            <goal>generateChangeLog</goal>-->
-<!--                        </goals>-->
-<!--                        <phase>process-resources</phase>-->
-<!--                    </execution>-->
+                    <!--                    <execution>-->
+                    <!--                        <id>Generate ChangeLog</id>-->
+                    <!--                        <configuration>-->
+                    <!--                            <propertyFile>src/main/resources/jdbc.properties</propertyFile>-->
+                    <!--                            <outputChangeLogFile>generatedChangeLog/GeneratedChangeLog.xml</outputChangeLogFile>-->
+                    <!--                            <dataDir>generatedChangeLog/data</dataDir>-->
+                    <!--                        </configuration>-->
+                    <!--                        <goals>-->
+                    <!--                            <goal>generateChangeLog</goal>-->
+                    <!--                        </goals>-->
+                    <!--                        <phase>process-resources</phase>-->
+                    <!--                    </execution>-->
 
                 </executions>
             </plugin>
@@ -151,8 +163,30 @@
                             <artifactId>lombok</artifactId>
                             <version>1.18.24</version>
                         </path>
+                        <path>
+                            <groupId>com.querydsl</groupId>
+                            <artifactId>querydsl-jpa</artifactId>
+                            <version>${querydsl.version}</version>
+                        </path>
                     </annotationProcessorPaths>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.mysema.maven</groupId>
+                <artifactId>apt-maven-plugin</artifactId>
+                <version>1.1.3</version>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>process</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/generated-sources/annotations</outputDirectory>
+                            <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
