--- a/car-rent/pom.xml
+++ b/car-rent/pom.xml
@@ -21,6 +21,7 @@
         <spring.version>5.3.23</spring.version>
         <spring.security.version>5.7.5</spring.security.version>
         <spring.data.version>2.7.5</spring.data.version>
+        <jackson.version>2.14.1</jackson.version>
     </properties>
 
     <dependencyManagement>
@@ -107,6 +108,11 @@
                 <artifactId>mockito-core</artifactId>
                 <version>4.8.0</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
